--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
         <meta name="description" content="Web site created using create-react-app"/>
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link type="text/css" href="./main.css" rel="stylesheet">
-        <link type="text/css" href="http://bootstrap-material.fusetheme.com/assets/icons/fuse-icon-font/style.css" rel="stylesheet">
-        <link type="text/css" href="http://bootstrap-material.fusetheme.com/assets/fuse-html/fuse-html.min.css" rel="stylesheet">
-        <link type="text/css" href="http://bootstrap-material.fusetheme.com/assets/css/main.css" rel="stylesheet">
+        <link type="text/css" href="./css/style.css" rel="stylesheet">
+        <link type="text/css" href="./css/fuse-html.min.css" rel="stylesheet">
+        <link type="text/css" href="./css/main.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
