--- a/public/index.html
+++ b/public/index.html
@@ -350,6 +350,10 @@
                 background-color: #000;
                 color: #fff !important;
             }
+            .pagination-part{
+                position: relative;
+                top: 3px;
+            }
         </style>
     </head>
     <body>
